src/test/resources/rules/fail/BadMethodName.java
package rules.fail;

public class BadMethodName {
    public void BadMethod() {}
}
